2008-03-15  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/* tests/*
    Remove all traces of old SRC_OLD_SINC_* converters.

    * Make.bat Win32/*
    Preliminary Win32 updates.

    * configure.ac
    Bump version to 0.1.3.

2008-03-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/api_simple.html
    Try once again to convince people that src_simple cannot be used on small
    chunks of a larger piece of audio.

2008-03-08  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/snr_bw_test.c
    Remove bodgy old throughput calculations.

2008-03-07  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/benchmark.c tests/throughput_test.c
    Rename former to the latter and make significant improvements.

2008-03-04  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/old_high_qual_coeffs.h src/old_mid_qual_coeffs.h
    Copy these from the old versions.

    * src/high_qual_coeffs.h src/mid_qual_coeffs.h 
    New versions of the coefficients with improved SNR.	

2008-02-10  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * Makefile.am configure.ac
    Add DISTCHECK_CONFIGURE_FLAGS to Makefile.am and a bunch of configure
    cleanups.

2008-01-21  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * examples/audio_out.c
    Apply patch from Yair K. to fix compiles with OSS v4.

2007-07-07  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * acinclude.m4
    Add AC_CHECK_SIGNAL macro.

    * configure.ac
    Use AC_CHECK_SIGNAL to check for SIGALRM.

    * tests/callback_hang_test.c
    Use HAVE_SIGGALRM and add empty main function if it doesn't exist.

2007-06-15  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/*_coeffs.h
    Change the way the coefficients are defined for improved safety.

    * src/src_sinc.c
    Adapt to the above.

2007-05-24  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/src_sinc.c