@@ -1,2 +1,2 @@
-EXTRA_DIST = Makefile.msvc config.h unistd.h unistd.h libsamplerate.def
+EXTRA_DIST = Makefile.msvc config.h unistd.h unistd.h libsamplerate-0.def
   
